@@ -28,7 +28,8 @@
 #include "gssapiP_krb5.h"
 
 OM_uint32
-krb5_gss_inquire_names_for_mech(minor_status, mechanism, name_types)
+krb5_gss_inquire_names_for_mech(context, minor_status, mechanism, name_types)
+    void	*context;
     OM_uint32	*minor_status;
     gss_OID	mechanism;
     gss_OID_set	*name_types;
